# Language

./: .gitignore  base.ASM  progTree  program  program.ASM  program.id0  program.id1  program.myl  program.nam
Backend/: Makefile  out  run.sh
Backend/inc/: convertToASM.h
Backend/src/: convertToASM.cpp  convert_NASM64.cpp  main.cpp
Frontened/: Makefile  out
Frontened/inc/: predprocessor.h  tokenizer.h
Frontened/src/: main.cpp  predprocessor.cpp  tokenizer.cpp
General/graphDump/: choose_color_and_name_byType.cpp  wrDotFile.cpp
General/programTree/: tree.h  treeFuncs.cpp
General/treeTransfer/: pullTree.cpp  pushTree.cpp  treeTransfer.h
Qt/: CMakeLists.txt  README.md  main.cpp  mainwindow.ui
dot_files/: backendDotFile.dot  frontenedDotFile.dot  tokensDotFile.dot
